# aiida-vasp

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  .readthedocs.yml  .style.yapf  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  codecov.yml  conftest.py  coverage.xml  epfl_0.5.0.patch  epfl_0.7.0.patch  install.py  pylama.ini  pyproject.toml  pytest.ini  readthedocs.yml  requirements-dev.txt  requirements-rtd.txt  requirements.txt  run_ci_tests.sh  run_vasp.py  setup.json  setup.py  tox.ini
.ci/: enable_ssh_localhost.sh  run_ci_tests.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml  nightly.yml  validate_release_tag.py
aiida/commands/: paw.py
aiida/djsite.db.subtests.vasp/: __init__.py  amn.py  basic.py  common.py  nscf.py  scf.py  vasp5.py  vaspcalcbase.py  wannier.py
aiida/djsite.db.subtests.vasp/data/: EntryWithCollCode43360.cif
aiida/orm.calc.job.vasp/: amn.py  base.py  cif.py  incar.py  kpoints.py  maker.py  nscf.py  scf.py  test_vasp5.py  vasp2w90.py  vasp5.py  wannier.py
aiida/orm.data.vasp/: archive.py  chargedensity.py  paw.py  potpaw.py
aiida/parsers.plugins.vasp/: amn.py  base.py  basic.py  nscf.py  scf.py  vasp.py  vasp2w90.py  vasp5.py  wannier.py
aiida/tools.codespc.vasp/: bands.py  compare_bands.py  default_paws.py  default_symbols.py  query.py
aiida/tools.codespc.vasp/io/: cif.py  doscar.py  eigenval.py  incar.py  kpoints.py  parser.py  potcar.py  vasprun.py  win.py
aiida/workflows.vasp/: autowindows.py  bandstructure.py  base.py  helper.py  nscf.py  projections.py  scf.py  tbmodel.py  wannier.py  windows.py
aiida/workflows/vasp/: bandstructure.py
aiida_vasp/: __init__.py
aiida_vasp/assistant/: parameters.py  parameters.yml
aiida_vasp/assistant/tests/: test_parameters.py
aiida_vasp/backendtests/: __init__.py  amn.py  basic.py  common.py  maker.py  nscf.py  scf.py  vasp.py  vasp5.py  vaspcalcbase.py  wannier.py
aiida_vasp/backendtests/data/: INCAR  INCAR_Vasp2w90  KPOINTS.list  KPOINTS.mesh
aiida_vasp/calcs/: amn.py  asevasp.py  base.py  immigrant.py  incar.py  kpoints.py  maker.py  neb.py  nscf.py  scf.py  vasp.py  vasp2w90.py  vasp5.py  w90win.py  wannier.py  wswannier.py
aiida_vasp/calcs/tests/: test_base.py  test_immigrant.py  test_neb.py  test_vasp.py  test_vasp2w90.py
aiida_vasp/calcs/workchains/: base.py  converge.py  relax.py  restart.py  vasp.py  verify.py
aiida_vasp/commands/: dryrun_vasp.py  mock_vasp.py  options.py  paw.py  potcar.py
aiida_vasp/commands/tests/: test_mock_vasp.py  test_potcar_cmd.py
aiida_vasp/data/: archive.py  chargedensity.py  paw.py  potcar.py  potpaw.py  wavefun.py
aiida_vasp/data/pymatgen/: outcar.py  vasprun.py
aiida_vasp/data/tests/: test_paw.py  test_potcar.py  test_potcar_walker.py
aiida_vasp/groups/: potcar_family.py
aiida_vasp/io/: chgcar.py  cif.py  doscar.py  eigenval.py  incar.py  kpoints.py  outcar.py  parser.py  poscar.py  potcar.py  vasprun.py  wavecar.py  win.py
aiida_vasp/io/incar/: _write.py
aiida_vasp/io/pymatgen/: incar.py  outcar.py  vasprun.py
aiida_vasp/parsers/: amn.py  asevasp.py  base.py  basic.py  error_handling.py  file_parser_definitions.py  manager.py  neb.py  node_composer.py  nscf.py  output_node_definitions.py  parser_manager.py  parser_settings.py  parsers.py  pymatgen_vasp.py  quantity.py  scf.py  settings.py  vasp.py  vasp2w90.py  vasp5.py  vasp_errors.yaml  vasp_errors.yml  wannier.py  wswannier.py
aiida_vasp/utils/: aiida_utils.py  bands.py  compare_bands.py  default_paws.py  default_symbols.py  delegates.py  extended_dicts.py  fixtures.py  inheritance.py  mock_code.py  mock_vasp.py  neb.py  parameters.py  query.py  settings_utils.py  win.py  workchains.py
aiida_vasp/workchains/: alt_relax.py  bands.py  bulkmodulus.py  converge.py  immigrant.py  master.py  neb.py  relax.py  restart.py  vasp.py  verify.py
aiida_vasp/workflows/: autowindows.py  bandstructure.py  base.py  helper.py  nscf.py  projections.py  relax.py  restart.py  scf.py  tbmodel.py  wannier.py  windows.py
binder/: environment.yml  postBuild
cookiecutters/workchains/: cookiecutter.json
doc/: Makefile  amn.rst  conf.py  index.rst  nscf.rst  open_questions.md  readthedocs.yml  requirements.txt  vasp5.rst  wannier.rst
doc/calcs/: amn.rst  base.rst  general.rst  index.rst  nscf.rst  scf.rst  special.rst  vasp.rst  vasp2w90.rst  vasp5.rst  wannier.rst
doc/source/: conf.py  index.rst  index_old.rst  quickstart-index.rst
doc/tutorial/: kickstart.rst
doc/wf/: autowindows.rst  bands.rst  helper.rst  singlecalc.rst  tbmodel.rst  windows.rst
docs/: README.rst  requirements.txt
docs/source/: conf.py  index.rst
examples/: auxiliary.py  example_vasp_workchain.ipynb  kppath.py  nscf_example.py  plot_bstr.py  run_bands.py  run_bare_calc.py  run_base_wf.py  run_converge.py  run_legacy.py  run_relax.py  run_relax_wf.py  run_standard.py  run_vasp.py  run_vasp_extensive.py  run_vasp_lean.py  run_vasp_moggie.py  run_vasp_prep_w90.py  run_wswannier.py  scf_example.py
ops/: run_coveralls.py  update_version.py
pytest/: config_example.yml  test_new.py  test_v5.py
src/aiida_vasp/: __init__.py
test/: GaAs.bands.json  GaAs.nscf.json  GaAs.projections.json  GaAs.scf.json  GaAs.wannier.json  GaAs.windows.json  ase_v_pmg.py  nscf_input.json  scf_input.json  simtypes.py  tbwf.json  test_bstr.py  test_run.py  test_sub.py  test_tvc.py  test_v5.py
test/GaAsTB/: INCAR  KPOINTS  POSCAR  POTCAR  wannier90.win
tests_pytest/: .gitignore  config.yml  config_example.yml  conftest.py  gaas_sample.py  test_vasp.py  test_vasp2w90.py  test_vasp5.py  test_win_parser.py
tests_pytest/samples/: wannier90.win
tutorials/: eos.py  eos_base.py  eos_parallel.py  pyproject.toml  run_bulk_modulus.py  run_fcc_si_dos.py  run_fcc_si_multiple_volumes.py  run_fcc_si_multiple_volumes_eos.py  run_fcc_si_one_volume.py  run_fcc_si_workchain.py  run_sic.py  run_sic_relax.py
utils/: pseudopotential.py  runwf.py
workchain/: base.py
(+596 files in other folders)
